@startuml Observer 패턴(김동석)

hide empty members
hide empty methods

title Observer 패턴(김동석)
header https://github.com/bluedskim/javaDesignPatterns
footer 작성시각 %date("yyyy.MM.dd' 'HH:mm")

interface PropertyChangeListener

class NewsAgency {
    PropertyChangeSupport support
    void addPropertyChangeListener(PropertyChangeListener pcl)
    void removePropertyChangeListener(PropertyChangeListener pcl)
    void setNews(String news)
}

class NewsChannel {
    String news
    void propertyChange(PropertyChangeEvent evt)
    String getNews()
}

PropertyChangeSupport <-- NewsAgency
PropertyChangeListener <-- NewsAgency
PropertyChangeListener <|.. NewsChannel
PropertyChangeEvent <-- NewsChannel
PropertyChangeSupport o- PropertyChangeListener

@enduml